--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">SimplePhotoWebServer</string>
+    <string name="app_name">Simple Photo Web Server</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="stop_button_label">Stop Server</string>
     <string name="start_button_label">Start Server</string>
+    <string name="msg_enable_wifi">Please enable Wifi access first</string>
+    <string name="msg_server_running">Server is running on</string>
+    <string name="msg_server_not_running">Server is not running</string>
+    <string name="status_text_default_label">Status...</string>
+    <string name="url_text_default_label">none</string>
+    <string name="number_default_httpd_port">9009</string>
 </resources>
