--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Simple Photo Web Server</string>
 
     <string name="action_settings">Settings</string>
+    <string name="empty_logo_label"></string>
     <string name="stop_button_label">Stop Server</string>
     <string name="start_button_label">Start Server</string>
     <string name="msg_enable_wifi">Please enable Wifi access first</string>
